<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:id="@+id/main_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/question_wrapper">

            <TextView
                style="@style/header"
                android:text="@string/question1" />

            <TextView
                style="@style/question_body"
                android:text="@string/question1_body" />

            <RadioGroup
                android:id="@+id/question1_answers"
                style="@style/multiple_choice">

                <RadioButton
                    android:id="@+id/q1a1"
                    style="@style/answer_text"
                    android:text="@string/q1a1" />

                <RadioButton
                    android:id="@+id/q1a2"
                    style="@style/answer_text"
                    android:text="@string/q1a2" />

                <RadioButton
                    android:id="@+id/q1a3"
                    style="@style/answer_text"
                    android:text="@string/q1a3" />

                <RadioButton
                    android:id="@+id/q1a4"
                    style="@style/answer_text"
                    android:text="@string/q1a4" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout style="@style/question_wrapper">

            <TextView
                style="@style/header"
                android:text="@string/question2" />

            <TextView
                android:id="@+id/textView"
                style="@style/question_body"
                android:layout_weight="1"
                android:text="@string/question2_body" />


            <LinearLayout
                android:id="@+id/question2_answers"
                style="@style/multiple_correct">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp">

                        <CheckBox
                            android:id="@+id/q2a1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/answer_text"
                            android:paddingLeft="24dp"
                            android:text="@string/q2a1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp">

                        <CheckBox
                            android:id="@+id/q2a2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/answer_text"
                            android:paddingLeft="24dp"
                            android:text="@string/q2a2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp">

                        <CheckBox
                            android:id="@+id/q2a3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/answer_text"
                            android:paddingLeft="24dp"
                            android:text="@string/q2a3" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp">

                        <CheckBox
                            android:id="@+id/q2a4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/answer_text"
                            android:paddingLeft="24dp"
                            android:text="@string/q2a4" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp">

                        <CheckBox
                            android:id="@+id/q2a5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/answer_text"
                            android:paddingLeft="24dp"
                            android:text="@string/q2a5" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout style="@style/question_wrapper">

            <TextView
                style="@style/header"
                android:text="@string/question3" />

            <TextView
                style="@style/question_body"
                android:text="@string/question3_body" />

            <RadioGroup
                android:id="@+id/question3_answers"
                style="@style/multiple_choice">

                <RadioButton
                    android:id="@+id/q3a1"
                    style="@style/answer_text"
                    android:text="@string/q3a1" />

                <RadioButton
                    android:id="@+id/q3a2"
                    style="@style/answer_text"
                    android:text="@string/q3a2" />

                <RadioButton
                    android:id="@+id/q3a3"
                    style="@style/answer_text"
                    android:text="@string/q3a3" />

                <RadioButton
                    android:id="@+id/q3a4"
                    style="@style/answer_text"
                    android:text="@string/q3a4" />


            </RadioGroup>

        </LinearLayout>


        <LinearLayout style="@style/question_wrapper">

            <TextView
                style="@style/header"
                android:text="@string/question4" />

            <TextView
                style="@style/question_body"
                android:text="@string/question4_body" />

            <LinearLayout
                android:id="@+id/question4_answers"
                style="@style/blank">

                <EditText
                    android:id="@+id/q4a1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout style="@style/question_wrapper">

            <TextView
                style="@style/header"
                android:text="@string/question5" />

            <TextView
                style="@style/question_body"
                android:text="@string/question5_body" />

            <LinearLayout
                android:id="@+id/question5_answers"
                style="@style/blank">

                <EditText
                    android:id="@+id/q5a1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout style="@style/question_wrapper">

            <TextView
                style="@style/header"
                android:text="@string/question6" />

            <TextView
                style="@style/question_body"
                android:text="@string/question6_body" />

            <RadioGroup
                android:id="@+id/question6_answers"
                style="@style/multiple_choice">

                <RadioButton
                    android:id="@+id/q6a1"
                    style="@style/answer_text"
                    android:text="@string/q6a1" />

                <RadioButton
                    android:id="@+id/q6a2"
                    style="@style/answer_text"
                    android:text="@string/q6a2" />

                <RadioButton
                    android:id="@+id/q6a3"
                    style="@style/answer_text"
                    android:text="@string/q6a3" />

                <RadioButton
                    android:id="@+id/q6a4"
                    style="@style/answer_text"
                    android:text="@string/q6a4" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout style="@style/question_wrapper">

            <TextView
                style="@style/header"
                android:text="@string/question7" />

            <TextView
                style="@style/question_body"
                android:text="@string/question7_body" />

            <LinearLayout style="@style/true_false">

                <RadioGroup
                    android:id="@+id/question7_answers"
                    style="@style/multiple_choice">

                    <RadioButton
                        android:id="@+id/q7a1"
                        style="@style/answer_text"
                        android:text="@string/q7a1" />

                    <RadioButton
                        android:id="@+id/q7a2"
                        style="@style/answer_text"
                        android:text="@string/q7a2" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout style="@style/question_wrapper">

            <TextView
                style="@style/header"
                android:text="@string/question8" />

            <TextView
                style="@style/question_body"
                android:text="@string/question8_body" />

            <LinearLayout style="@style/true_false">

                <RadioGroup
                    android:id="@+id/question8_answers"
                    style="@style/multiple_choice">

                    <RadioButton
                        android:id="@+id/q8a1"
                        style="@style/answer_text"
                        android:text="@string/q7a1" />

                    <RadioButton
                        android:id="@+id/q8a2"
                        style="@style/answer_text"
                        android:text="@string/q7a2" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout style="@style/question_wrapper">

            <TextView
                style="@style/header"
                android:text="@string/question9" />

            <TextView
                style="@style/question_body"
                android:text="@string/question9_body" />

            <LinearLayout
                android:id="@+id/question9_answers"
                style="@style/blank">

                <EditText
                    android:id="@+id/q9a1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hint" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout style="@style/question_wrapper">

            <TextView
                style="@style/header"
                android:text="@string/question10" />

            <TextView
                style="@style/question_body"
                android:text="@string/question10_body" />

            <LinearLayout style="@style/true_false">

                <RadioGroup
                    android:id="@+id/question10_answers"
                    style="@style/multiple_choice">

                    <RadioButton
                        android:id="@+id/q10a1"
                        style="@style/answer_text"
                        android:text="@string/q7a1" />

                    <RadioButton
                        android:id="@+id/q10a2"
                        style="@style/answer_text"
                        android:text="@string/q7a2" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:onClick="submitGrade"/>


    </LinearLayout>


</ScrollView>
